# mos_env

./: .gitignore  README.md  app_cmos.py  app_mos.py  app_mos_v1.py  index_comp.csv  pyproject.toml  requirements.txt  requirements_mod.txt  select_audio.py  test_fpenguin.py  test_w_ljwav_v1.py  toybox.py  uanalysis_mos.py  uanalysis_mos4stats.py  uanalysis_mos_all.py  uanalysis_mos_all_focussub.py  uanalysis_mos_all_focussystem.py  uanalysis_mos_all_stats.py  uanalysis_mos_all_stats_focussub.py  umakemosfig.py  umakemosfig_w_id.py  wadd_model4moscsv.py  wanalysis_duration.py  wcheck.sh  wcheck_json.py  wcheck_mostestspendtime.py  wconvertpathincsv.py  wcopy_lj.py  wmakeexp_cmos.py  wmakeexp_mos.py  wtest_extract_model.py  wtest_makeexp_cmos.py  wtest_modelname_wo_calcmos.py  wtimecheck.py
configs/: config_batch_gt_testrun.yaml  config_exp_PBL.yaml  config_exp_mid.yaml  config_freqk_k3.yaml  config_gt_k3.yaml  config_intr_gt_testrun.yaml  config_sgt_k3.yaml  config_tfk_k3.yaml  config_tfk_k5.yaml  config_tfkful_k3.yaml  config_tfkfulmask_k3.yaml  config_timek_k3.yaml  phn2id.json  test_dataset.json  valid_dataset.json
data/: README.md
exp_configs/: config_cmos_a_pretest.csv  config_mos_a.csv  config_mos_a_lj.csv  config_mos_a_v3.csv  config_mos_b.csv  config_mos_b_lj.csv  config_mos_b_v3.csv  config_mos_c.csv  config_mos_c_lj.csv  config_mos_c_v3.csv  config_pretest_mos_a.csv  config_pretest_mos_b.csv  config_pretest_mos_c.csv  config_wavs_a.csv  config_wavs_b.csv  config_wavs_c.csv  duration.json  explanation4exp.yaml  explanation4exp_v1.yaml
